<resources>
    <string name="app_name">admin_app</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thur">Thur</string>
    <string name="Sun">Sun</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Pid">Pid</string>
    <string name="patient_name">patient name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="member_name">Member name</string>
    <string name="member_designation">Member Designation</string>
    <string name="member_phone_number">Member Phone Number</string>
    <string name="about">About</string>
    <string name="submit">submit</string>
</resources>