<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vaccine.NewVaccineActivity">

    <ImageView
        android:id="@+id/memimage"
        android:layout_width="117dp"
        android:layout_height="116dp"

        app:layout_constraintBottom_toTopOf="@+id/selectmempic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectmempic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Photo"
        android:textColor="@color/purple_500"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/memname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/memimage" />

    <EditText
        android:id="@+id/memname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/member_name"
        app:layout_constraintBottom_toTopOf="@id/memdesignation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectmempic" />
    <EditText
        android:id="@+id/memdesignation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/member_designation"
        app:layout_constraintBottom_toTopOf="@id/memnumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/memname" />

    <EditText
        android:id="@+id/memnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/member_phone_number"
        app:layout_constraintBottom_toTopOf="@id/memabout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/memdesignation" />
    <EditText
        android:id="@+id/memabout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:inputType="textMultiLine"
        android:hint="@string/about"
        app:layout_constraintBottom_toTopOf="@id/memsubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/memnumber" />

    <Button
        android:id="@+id/memsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/memabout"
        app:layout_constraintVertical_bias="0.217" />

</androidx.constraintlayout.widget.ConstraintLayout>