<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/patientimg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/patientname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/patientimg"
            android:text="@string/patient_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/patientid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/patientname"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/patientimg"
            android:drawablePadding="2dp"
            android:text="@string/Pid" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
